--- a/index.html
+++ b/index.html
@@ -15,19 +15,34 @@
         </div>
         
         <!-- ACTIVITIES SECTION -->
-        <div>
-            <h3>Top three activities to do in Leigh-on-Sea</h3>
-            <img src="images/broadway.jpg">
-            <img src="images/library-gardens.jpg">
-            <img src="images/ugos.jpg">
+        <div id="activities">
+            <h2>Top three activities to do in Leigh-on-Sea</h2>
+            <div id="activity-options-container">
+                <div class="activity-options">
+                    <img class="img-act" src="images/broadway.jpg">
+                    <h4>Visit the pubs or bars</h4>
+                    <p>The Broadway pub located in the centre of Leigh-on-Sea is a great place to enjoy a drink. </p>
+                </div>
+                <div class="activity-options">
+                    <img class="img-act" src="images/library-gardens.jpg">
+                    <h4>Go for a walk in the parks</h4>
+                    <p>Library gardens offers great sea views and a peaceful area to relax.</p>
+                </div>
+                <div class="activity-options">
+                    <img class="img-act" src="images/ugos.jpg">
+                    <h4>Grab a bite to eat</h4>
+                    <p>Ugo's offers wood-fired Neopolitan pizzas from a family run business that has been around for over 25 years!</p>
+                </div>
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
-            <h3>Your guide</h3>
-            <p>"I have lived at Leigh-on-Sea for over 15 years, so I can show you all of its best parts and hidden secrets."</p>
-            <h4>Louis Porter</h4>
+        <div id="guide-card">
             <img src="images/headshot.jpeg">
-        </div>
+            <div id="card-text">
+                <h3>Your guide</h3>
+                <p>"I have lived at Leigh-on-Sea for over 15 years, so I can show you all of its best parts and hidden secrets."</p>
+                <h4>Louis Porter</h4>
+            </div>
     </body>
 </html>
